// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GaterMetadata transformer a simple root component has empty input and output 1`] = `
Metadata {
  "components": Array [
    Object {
      "classname": "FeatDisplayRootComponent",
      "fileName": "/__test__/__fixtures__/gather-metadata/root-component.tsx",
      "finalTagName": "bearer-feat",
      "initialTagName": "feat",
      "isRoot": true,
      "name": "feat",
    },
  ],
  "prefix": null,
  "registerComponent": [Function],
  "suffix": null,
}
`;

exports[`GaterMetadata transformer a simple root component has input and output matching props 1`] = `
Metadata {
  "components": Array [
    Object {
      "classname": "FeatDisplayRootComponent",
      "fileName": "/__test__/__fixtures__/gather-metadata/root-component-with-api.tsx",
      "finalTagName": "bearer-complex-feature",
      "initialTagName": "complex-feature",
      "isRoot": true,
      "name": "complex-feature",
    },
  ],
  "prefix": null,
  "registerComponent": [Function],
  "suffix": null,
}
`;
